fix the bug of signature and applay SEO recommondations
Former-commit-id: a90894e4da4d356549016723af34ef57ac43a0da [formerly 86b2d150959eab62dd562f746127a50e5dced0df] [formerly 07eb7448ec8736f42512374b2a3c5ae0c157e1da [formerly 27e8bcdf5c393b7e766ba43e1242cbd1ec8eb05d]]
Former-commit-id: b8bd36f6e716018ecb27443593c64de80c551151 [formerly 11ff2b1e1beec9558aa6c12a8bfbb8bf3710a592]
Former-commit-id: dbca5651e804d4446d78cd627bde46f9de067253

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8" > <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9" > <![endif]-->
-<!--[if !IE]><!--> <html xmlns:ng="http://angularjs.org"> <!--<![endif]-->
+<!--[if !IE]><!--> <html xmlns:ng="http://angularjs.org" lang="en"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="content-language" content="en">
   <title>i/oGrow Engine Platform</title>
   <!--<meta http-equiv="Cache-control" content="no-cache">
   <meta http-equiv="Expires" content="-1"> -->
@@ -34,40 +35,6 @@
 
 
 
-  <script type="text/javascript">
-  window.___gcfg = {
-  // lang: 'en',
-    parsetags: 'explicit',
-    lang: 'en-US'
-  };
-  (function() {
-    var po = document.createElement('script');
-    po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://plus.google.com/js/client:plusone.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(po, s);
-  })();
-  </script>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-
-    console.log('1 base');
-
-    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
-    ga('set', 'dimension1', {{user.google_user_id}}); // Set a `customUserId` dimension at page level
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview'); 
-
-    console.log({{user.google_user_id}});
-
-
-
-</script>
-<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s9iirr8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 </head>
 <body class="page-header-fixed gray-body">
 
@@ -129,6 +96,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       <input type="hidden" id="license_is_expired" value="{{license_is_expired}}" />
       <input type="hidden" id="user_suspended" value="{{user_suspended}}"/>
       <input type="hidden" id="active_app" value="{{active_app.key.id()}}"/>
+      <input type="hidden" value="{{user.emailSignature |e}}" id="signature" />
 
         <ul class="nav navbar-nav pull-right">
 
@@ -430,9 +398,9 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 
 
-// var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -536,7 +504,7 @@ console.log(created_at.getTime()/1000);
 <script src="/static/plugins/d3-funnel-charts.js" async></script>
 <script src="/static/plugins/ng-google-chart.js" async></script>-->
 <!--<script src="https://storage.googleapis.com/iogrow-cdn/opt_files/js/async_scripts_2.min.js" ></script>-->
-<script src="/static/build/js/async_scripts_2.min.js" ></script>
+<script src="/static/build/js/async_scripts_2.js" ></script>
 <script type="text/javascript" src="/static/build/js/sync_ctrls_sers_scripts.js"></script>
 <!--<script type="text/javascript" src="/static/build/js/async_ctrls_sers_scripts.js" ></script>-->
 
@@ -605,6 +573,41 @@ console.log(created_at.getTime()/1000);
  <!-- <script src="/static/hopscotch/js/hopscotch.js" ></script>
   <script src="/static/hopscotch/js/tour.js" ></script>-->
    <!-- <script src="/static/app/scripts/controllers/importcontrollers.js" async></script>-->
+     <script type="text/javascript">
+  window.___gcfg = {
+  // lang: 'en',
+    parsetags: 'explicit',
+    lang: 'en-US'
+  };
+  (function() {
+    var po = document.createElement('script');
+    po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://plus.google.com/js/client:plusone.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(po, s);
+  })();
+  </script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+
+    console.log('1 base');
+
+    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga('set', 'dimension1', {{user.google_user_id}}); // Set a `customUserId` dimension at page level
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview'); 
+
+    console.log({{user.google_user_id}});
+
+
+
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s9iirr8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+
 <script src="/static/hopscotch/js/hopscotch.js" ></script>
  <script type="text/javascript">  
       function loadCSS(e,n,o,t){"use strict";var d=window.document.createElement("link"),i=n||window.document.getElementsByTagName("script")[0],s=window.document.styleSheets;return d.rel="stylesheet",d.href=e,d.media="only x",t&&(d.onload=t),i.parentNode.insertBefore(d,i),d.onloadcssdefined=function(n){for(var o,t=0;t<s.length;t++)s[t].href&&s[t].href.indexOf(e)>-1&&(o=!0);o?n():setTimeout(function(){d.onloadcssdefined(n)})},d.onloadcssdefined(function(){d.media=o||"all"}),d}
