--- a/templates/new_web_site/sign-in.html
+++ b/templates/new_web_site/sign-in.html
@@ -2,6 +2,7 @@
 <!-- saved from url=(0037)https://www.google.dz/drive/download/ -->
 <html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta http-equiv="content-language" content="en">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="Discover new customer, get organized and grow your business" name="description">
@@ -17,7 +18,113 @@
     <script src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
     <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
-    <script type="text/javascript">
+    
+  </head>
+  <body class="download nav-dark hoverable">
+    <header class="header" role="banner">
+      <div class="header-item with-site-logo">
+        <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
+        data-g-label="Drive logo" >
+        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png"></a>
+      </div>
+      <nav class="nav-site" data-nav-name="mobile">
+        <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
+       
+      </nav>
+      
+    </header>
+    <section class="section-intro" style="height: 560px; opacity: 1;">
+      <div class="content" style="margin-left: 309.5px !important;">
+        <div class="column column-left with-example">
+          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/devices.jpg">
+        </div>
+        <div class="column column-right with-copy">
+          <div class="copy text-left">
+            <h1 class="section-headline heading-headline allow-orphan">
+              Sign in
+            </h1>
+            <p>
+              The tools you need, all in one place.
+            </p>
+            <p>Smoothly integrated with Google Apps for Work.</p>
+            
+                        {%if user %}
+                          <button class="g-signin"
+                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
+                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
+                              data-clientId="{{ CLIENT_ID }}"
+                              data-callback="onSignInCallback"
+                              data-theme="dark"
+                              data-cookiepolicy="single_host_origin"
+                              data-width="wide"
+                              data-height="tall">
+                        </button>
+                        {%else%}
+                          <button class="g-signin"
+                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
+                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
+                              data-clientId="{{ CLIENT_ID }}"
+                              data-callback="onSignInCallback"
+                              data-accesstype="offline"
+                              data-approvalprompt="force"
+                              data-theme="dark"
+                              data-cookiepolicy="single_host_origin"
+                              data-width="wide"
+                              data-height="tall">
+                        </button>
+                        {%endif%}
+                        
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="signature-wrapper">
+      <div id="maia-signature"></div>
+    </div>
+    <div class="maia-footer" id="maia-footer">
+      <div id="maia-footer-global">
+        <div class="maia-aux">
+          <ul>
+          <li>
+            800 West El Camino Real,
+Suite 180, Mountain View,
+California, 94040,
+          </li>
+            <li>
+            
+                 <a href="mailto:contact@iogrow.com" rel="nofollow">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow" rel="nofollow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow" rel="nofollow">Facebook</a>
+            
+            </li>
+           
+            <li>
+              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
+            </li>
+            <li>
+              <a href="/terms-of-services/">Terms of service</a>
+            </li>
+            <li>
+              <a href="/privacy/">Privacy policy</a>
+            </li>
+            <li>
+              <a href="/security/">Security information</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div><script src="/static/new_web_site/google_drive_files/TweenMax.min.js">
+</script> <script src="/static/new_web_site/google_drive_files/morlock.min.js">
+</script> <script src="/static/new_web_site/google_drive_files/drive-site.min.js">
+</script> <script>
+
+var manageParams = new drive.QueryParamManager();
+    </script> <script>
+var download = new drive.SetUp('download');
+    </script>
+  
+
+  <script type="text/javascript">
   (function() {
     var po = document.createElement('script');
     po.type = 'text/javascript'; po.async = true;
@@ -180,7 +287,7 @@ var helper = (function() {
 })();
 
 /**
- * Perform jQuery initialization and check to ensure that you updated your
+ * Perform jQuery initialization and check to ensure that you up dated your
  * client ID.
  */
 
@@ -212,108 +319,4 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 {% endif %}
 
 </script>
-  </head>
-  <body class="download nav-dark hoverable">
-    <header class="header" role="banner">
-      <div class="header-item with-site-logo">
-        <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo" >
-        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png"></a>
-      </div>
-      <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
-       
-      </nav>
-      
-    </header>
-    <section class="section-intro" style="height: 560px; opacity: 1;">
-      <div class="content" style="margin-left: 309.5px !important;">
-        <div class="column column-left with-example">
-          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/devices.jpg">
-        </div>
-        <div class="column column-right with-copy">
-          <div class="copy text-left">
-            <h1 class="section-headline heading-headline allow-orphan">
-              Sign in
-            </h1>
-            <p>
-              The tools you need, all in one place.
-            </p>
-            <p>Smoothly integrated with Google Apps for Work.</p>
-            
-                        {%if user %}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                        </button>
-                        {%else%}
-                          <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
-                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                              data-clientId="{{ CLIENT_ID }}"
-                              data-callback="onSignInCallback"
-                              data-accesstype="offline"
-                              data-approvalprompt="force"
-                              data-theme="dark"
-                              data-cookiepolicy="single_host_origin"
-                              data-width="wide"
-                              data-height="tall">
-                        </button>
-                        {%endif%}
-                        
-
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="signature-wrapper">
-      <div id="maia-signature"></div>
-    </div>
-    <div class="maia-footer" id="maia-footer">
-      <div id="maia-footer-global">
-        <div class="maia-aux">
-          <ul>
-          <li>
-            800 West El Camino Real,
-Suite 180, Mountain View,
-California, 94040,
-          </li>
-            <li>
-            
-                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow">Facebook</a>
-            
-            </li>
-           
-            <li>
-              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
-            </li>
-            <li>
-              <a href="/terms-of-services/">Terms of service</a>
-            </li>
-            <li>
-              <a href="/privacy/">Privacy policy</a>
-            </li>
-            <li>
-              <a href="/security/">Security information</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div><script src="/static/new_web_site/google_drive_files/TweenMax.min.js">
-</script> <script src="/static/new_web_site/google_drive_files/morlock.min.js">
-</script> <script src="/static/new_web_site/google_drive_files/drive-site.min.js">
-</script> <script>
-
-var manageParams = new drive.QueryParamManager();
-    </script> <script>
-var download = new drive.SetUp('download');
-    </script>
-  
 </body></html>
