--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -2,6 +2,7 @@
 <!-- saved from url=(0029)https://www.google.com/drive/ -->
 <html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta http-equiv="content-language" content="en">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." name="description">
@@ -43,49 +44,7 @@
       font-weight: bold;
     }
     </style>
-    <!-- Google Analytics -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script');
-    po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://plus.google.com/js/client:plusone.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(po, s);
-  })();
-  </script>
-<script type="text/javascript">var _kmq = _kmq || [];
-var _kmk = _kmk || '6c129bfa2e765debb22e41c9e3646c128a75148d';
-function _kms(u){
-  setTimeout(function(){
-    var d = document, f = d.getElementsByTagName('script')[0],
-    s = d.createElement('script');
-    s.type = 'text/javascript'; s.async = true; s.src = u;
-    f.parentNode.insertBefore(s, f);
-  }, 1);
-}
-_kms('//i.kissmetrics.com/i.js');
-_kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
-
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-if (window.location.host != "localhost")
-{
-  {%if user %}
-    console.log('1');
-    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
-    ga('send', 'pageview');
-  {% else %}
-        console.log('2');
-        ga('create', 'UA-52188380-1', 'auto');
-        ga('send', 'pageview');
-  {% endif %}
-}
-
-
-</script>
-<!-- End Google Analytics -->
+   
   </head>
   <body class="index nav-light">
     <header class="header" role="banner">
@@ -101,7 +60,7 @@ if (window.location.host != "localhost")
         <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
         <ul>
           <li>
-            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank">Install ioGrow Chrome Extension</a>
+            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank" rel="nofollow">Install ioGrow Chrome Extension</a>
           </li>
 
           <li class="mobile-is-hidden float-in">
@@ -368,7 +327,7 @@ if (window.location.host != "localhost")
           </li>
             <li>
             
-                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow">Facebook</a>
+                 <a href="mailto:contact@iogrow.com" rel="nofollow">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow" rel="nofollow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow" rel="nofollow">Facebook</a>
             
             </li>
            
@@ -385,7 +344,7 @@ if (window.location.host != "localhost")
               <a href="/security/">Security information</a>
             </li>
             <li>
-              <a href="https://gcdc2013-iogrow.appspot.com/_ah/api/explorer">API&DOCS</a>
+              <a href="https://gcdc2013-iogrow.appspot.com/_ah/api/explorer" rel="nofollow">API&DOCS</a>
             </li>
           </ul>
         </div>
@@ -572,5 +531,49 @@ function onSignInCallback(authResult) {
  */
 
 </script>
+
+ <!-- Google Analytics -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script');
+    po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://plus.google.com/js/client:plusone.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(po, s);
+  })();
+  </script>
+<script type="text/javascript">var _kmq = _kmq || [];
+var _kmk = _kmk || '6c129bfa2e765debb22e41c9e3646c128a75148d';
+function _kms(u){
+  setTimeout(function(){
+    var d = document, f = d.getElementsByTagName('script')[0],
+    s = d.createElement('script');
+    s.type = 'text/javascript'; s.async = true; s.src = u;
+    f.parentNode.insertBefore(s, f);
+  }, 1);
+}
+_kms('//i.kissmetrics.com/i.js');
+_kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+if (window.location.host != "localhost")
+{
+  {%if user %}
+    console.log('1');
+    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga('send', 'pageview');
+  {% else %}
+        console.log('2');
+        ga('create', 'UA-52188380-1', 'auto');
+        ga('send', 'pageview');
+  {% endif %}
+}
+
+
+</script>
+<!-- End Google Analytics -->
   
 </body></html>
