--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -13,7 +13,7 @@
     </title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
     <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
-    <script src="/static/new_web_site/google_drive_files/modernizr.js">
+    <script async src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
     <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
     <style type="text/css">
@@ -53,18 +53,7 @@
     s.parentNode.insertBefore(po, s);
   })();
   </script>
-<script type="text/javascript">var _kmq = _kmq || [];
-var _kmk = _kmk || '6c129bfa2e765debb22e41c9e3646c128a75148d';
-function _kms(u){
-  setTimeout(function(){
-    var d = document, f = d.getElementsByTagName('script')[0],
-    s = d.createElement('script');
-    s.type = 'text/javascript'; s.async = true; s.src = u;
-    f.parentNode.insertBefore(s, f);
-  }, 1);
-}
-_kms('//i.kissmetrics.com/i.js');
-_kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+<script type="text/javascript">
 
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -228,14 +217,18 @@ if (window.location.host != "localhost")
           <div class="column column-left with-copy">
             <div class="copy text-left">
               <h2 class="heading-headline">
-                Generate leads from LinkedIn
+                Lead generation from LinkedIn
               </h2>
               <p class="section-body">
                  With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals.
               </p>
               <br>
-              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" style="display: inline-block;" target="_blank">
-            Install ioGrow Chrome extension</a>
+              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" style="display: inline-block;font-size: 20px;vertical-align: text-top;" target="_blank"><img src="http://storage.googleapis.com/iogrow-cdn/chrome_store.png" width="25
+                                                                                                           px" style="
+    margin-right: 10px;
+    vertical-align: middle;
+">
+              Install ioGrow Chrome extension</a>
             </div>
           </div>
         </div>
@@ -248,7 +241,7 @@ if (window.location.host != "localhost")
           <div class="column column-right with-copy">
             <div class="copy text-left">
               <h2 class="heading-headline">
-                Everything you need in your business, all in one place
+                Organize your sales process and close more deals
               </h2>
               <p class="section-body allow-orphan">
                Whether you’re completing your daily tasks, scheduling your events with your customers or closing a sales opportunity – getting everything related to the job on one page, instantly makes collaboration easier. Attach files, add notes and comments – everything’s updated in real time.
@@ -294,7 +287,7 @@ if (window.location.host != "localhost")
           <div class="column column-full-width with-copy">
             <div class="copy section-centered text-center">
               <h2 class="heading-headline">
-                Built on top of Google for Work
+                Built on top of Google
               </h2>
               <p class="section-body">
                 "Work is more than calculating profits, balancing supply & demand or pushing paper. Work is people coming together to dream, create, hack, hustle and make. People should connect easily to share ideas, develop them together, and get things done from anywhere.Technology should make work easier and faster, not harder. It should get out of the way so our ideas have space to grow and inspiration is free to strike at any moment. When we use the tools that make our lives easier, we can do our best work." Dr.Eric Schmidt
