fixing intercom display bug
Former-commit-id: d592443164d0647ac342a3599a4047fb1fc6d74b [formerly 9ec401ae97801598352a308f0385bc4524edb6de] [formerly 6940c688097053c58f5db79d7eb40007e788fc2c [formerly 4cfda10ee2c4fb4bf94071314787ae46fb7f68f1]]
Former-commit-id: 957c9a20f2ea7f3c1f8fbb3c6680ec30040c6ed9 [formerly b7c6ca21b44484fceed733ec3d7ce943e3bd9928]
Former-commit-id: 920c80da31cfde0e5dfe223c2cbd4be710e8f20c

--- a/templates/base.html
+++ b/templates/base.html
@@ -398,9 +398,9 @@
 
 
 
- var ROOT = '/_ah/api';
+ // var ROOT = '/_ah/api';
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -485,17 +485,19 @@ var created_at = new Date("{{user.created_at}}");
 console.log('-----:)------');
 console.log('1234567890');
 console.log(created_at.getTime()/1000);
-/*window.Intercom('boot', {
-  app_id: "s9iirr8w",
-  // TODO: The current logged in user's full name
-  name: "{{user.google_display_name}}",
-  // TODO: The current logged in user's email address.
-  email: "{{user.email}}",
-  topics: '{{topics}}',
-  completed_tour: '{{user.completed_tour}}',
-  // TODO: The current logged in user's sign-up date as a Unix timestamp.
-  created_at: created_at.getTime()/1000
-});*/
+$(document).ready(function() {
+    window.Intercom('boot', {
+      app_id: "s9iirr8w",
+      // TODO: The current logged in user's full name
+      name: "{{user.google_display_name}}",
+      // TODO: The current logged in user's email address.
+      email: "{{user.email}}",
+      completed_tour: '{{user.completed_tour}}',
+      oranization:'{{organization_name}}',
+      // TODO: The current logged in user's sign-up date as a Unix timestamp.
+      created_at: created_at.getTime()/1000
+    });
+});
  </script>
 
 <script type="text/javascript" src="/static/build/js/sync_scripts.min.js" ></script>
