generting tasks bar on all list7 pages
Former-commit-id: a52f16c7da4e4524c742ff64702379f7ddae0d80 [formerly ae0877793764a19051ca07dea54f8d530d29eda1] [formerly a5499cca3e84b5d15685325a89591720d4aecc23 [formerly 6d8ede5b1fcbbcbfc63d251b1f4c0310d29c06e4]]
Former-commit-id: e6f21e1b02aae0f11ab998fe4604028ffaa64dba [formerly db667f2b2436a66e905b8b29803bc1355a89fc7c]
Former-commit-id: a873123e88a0f7cd99ce06190647d307ebe515e1

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -127,11 +127,11 @@
                     </li>
                     <li role="presentation" class="dropdown-header cus-dropdown-header">Order by</li>
                     <li>
-                      <a ng-click="orderBy('firstname')" href="" >Name</a>
-                    </li>
-                    <li>
                       <a ng-click="orderBy('-updated_at')" href="">Last modified</a>
-                    </li>                    
+                    </li> 
+                    <li>
+                      <a ng-click="orderBy('firstname')" href="" >Name</a>
+                    </li>                   
                   </ul>
               </div>
               <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
@@ -347,7 +347,7 @@
                                   <span> <%= lead.firstname %> <%= lead.lastname %></span>
                                 </a>
                                 <br>
-                                <a  class="desc" href="/#/search/type:Lead <%=lead.title%>" style="color: gray;">
+                                <a  title="<%=lead.title%>" class="desc" href="/#/search/type:Lead <%=lead.title%>" style="color: gray;">
                                   <%=lead.title%>
                                 </a>
                           </div>
@@ -503,7 +503,7 @@
                           </a>
                         </span>-->
                         <span ng-show="lead.title">
-                          <a  class="desc" href="/#/search/type:Lead <%=lead.title%>">
+                          <a   title="<%=lead.title%>" class="desc" href="/#/search/type:Lead <%=lead.title%>">
                             <%=lead.title%>
                           </a>
                         </span>
