--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1,75 +1,193 @@
-<div class="row subHeader">
-    <div class="currentApp">
-       <div class="btn-group">
-           <a class="filterItem" href="#" data-toggle="dropdown" >
+<div class="row subHeader actionsBar">
+    <table style="width:100%;height: 55px;">
+          <tbody><tr>
+            <td class="appTd">
+            <div class="btn-group">
+                 <a class="filterItem" href="#" data-toggle="dropdown" style="margin-right:0px">
+                  {% if active_app.label =="Relationships" %}
+                      <img class="app_icon" src="static/img/sm-iogrow-true.png" style="display:inline-block;height: 20px;margin-right: 3px;">
+                      {% else%}
+                      <img class="app_icon" src="static/img/admin_min.png" style="display:inline-block;height: 20px;margin-right: 3px;">                        
+                  {% endif %}
+                  <span class="hide_sm">{{_(active_app.label)}}</span>   
+                  <i class="icon-angle-down fa fa-angle-down"></i>
+                 </a>
+                 <ul class="dropdown-menu">
+                  {%for application in apps %}
+                        {% if application.label =="Relationships" %}
+                          <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal"><img class="app_icon"  src="static/img/sm-iogrow-true.png" style="display:inline-block;height: 20px;margin-right: 3px;">{{_(application.label)}}</a></li>
+                          {% else%}
+                           <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal"><img class="app_icon"src="static/img/admin_min.png" style="display:inline-block;height: 20px;margin-right: 3px;">{{_(application.label)}}</a></li>
+                        
+                          {% endif %}
+                       
 
-            {{_(active_app.label)}}   
-
-            <i class="icon-angle-down fa fa-angle-down"></i>
-           </a>
-           <ul class="dropdown-menu">
-            {%for application in apps %}
-
-                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{_(application.label)}}</a></li>
-
-            {%endfor%}
-           </ul>
-        </div>
-
-    </div>
-
-
-    <div class=" subHeaderContent">
-      <div class="col-md-9 col-sm-11 col-xs-9">
-      <div class="row">
-      <div class="col-md-10 col-xs-12 filter-content">
-      <div class="filterOptions">
-        <span role="button" class="filterItem hiddenOnPhone" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _("All")}} <span class="hidden-xs hiddenOnxs">{{ _("Accounts")}}</span> </span>
-        <span role="button" class="filterItem hiddenOnPhone" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">{{ _("My")}} <span class="hidden-xs hiddenOnxs">{{ _("Accounts")}}</span></span>
-          <div class="btn-group visibleOnPhone">
-                <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='filter'}" >
-                  {{ _("Filter by")}}
-                  <i class="icon-angle-down"></i>
+                  {%endfor%}
+                 </ul>
+             </div>
+          </td>
+      <td class="middleHeaderTd">
+        <div class="subheadContient" style="padding-top: 5px;float: left;vertical-align: middle;">
+               <div class="customCheckbox customCheckboxOnHeader " style="display: inline-block; float: left;">  
+                  <input ng-show="leads" title="Select lead" style="padding-top: 4px;" type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox" id="leadCheckAll">
+                  <label for="leadCheckAll" class="labelElement">
+                    <span class="check"></span>
+                    <span class="box"></span>
+                  </label>  
+              </div>
+              <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
+                {{ _("Accounts")}}
+              </h2>
+              <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
+                <a class="headerBtn" title="Refresh" ng-click="refreshCurrent();"> 
+                      <i class="fa fa-repeat" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
-                <ul class="dropdown-menu drp-dwn-xs-right">
-                  <li><a  ng-click="filterByOwner();selectedOption ='all'" href="#" data-toggle="modal">{{ _('All Accounts') }}</a></li>
-                  <li><a ng-click="filterByOwner('{{ME}}');selectedOption ='my'" href="#" data-toggle="modal">{{ _('My Accounts') }}</a></li>
-                  <li><a ng-click="showTagFilterCard();selectedOption ='tags'" href="#" data-toggle="modal">{{ _('Tags') }}</a></li>
-                </ul>
+                <!--<a class="" title="Preview" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-eye" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
+                <a class="" title="Share" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-share-square-o" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
+                <a class="" title="Convert" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa  fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>-->
+                <a class="headerBtn" title="Add tags" ng-click="showAssigneeTags()" ng-hide=" selectedCards.length==0"> 
+                      + <i class="fa fa-tags"></i>
+                </a>
+                <!--<a class="" title="Print" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-print" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>-->
+                <a class="headerBtn hide_md" title="Upload" ng-click="showImportModal()"> 
+                      <i class="fa fa-cloud-upload"></i>
+                </a>
+                <a class="headerBtn hide_md" title="Download"  ng-click="ExportCsvFile()"> 
+                      <i class="fa fa-cloud-download"></i>
+                </a>
+                <a class="headerBtn" title="Delete"  ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()"> 
+                      <i class="fa fa-trash-o"></i>
+                </a>
+                <!--<a class="" title="More" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa  fa-ellipsis-horizontal" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>-->
+                <div class="btn-group show_md" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="More" data-toggle="dropdown"> 
+                     <!-- <i class="fa  fa-ellipsis-vertical" style="padding-top: 6px; font-size: 16px;"></i>-->
+                     {{ _("More")}}
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li>
+                      <a class="hide_md" title="Upload" ng-click="showImportModal()"> 
+                        <i class="fa fa-cloud-upload"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="hide_md" title="Download"  ng-click="ExportCsvFile()"> 
+                         <i class="fa fa-cloud-download"></i>
+                      </a>
+                    </li>                                                         
+                  </ul>
+              </div> 
+              </div>
+               <!--<div class="communicationBottons pull-right">
+                    <a class="" title="Send an Email" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-envelope" style="padding-top: 6px; font-size: 16px;"></i>
+                    </a>
+                    <a class="" title="Start a Hangout" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                          <i class="fa fa-video-camera" style="padding-top: 6px; font-size: 16px;"></i>
+                    </a>
+                    <a class="" title="Tweet" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                          <i class="fa fa-twitter" style="padding-top: 6px; font-size: 16px;"></i>
+                    </a>
+                  
+              </div>-->
+              <div class="clearfix"></div>
+        </div>
+            <a href="/#/accounts/new" class="btn red newAccountBtnOnscroll pull-right">
+             <i class="fa fa-building"></i>{{ _(" New")}}<span class="hidden-xs hiddenOnxs">{{ _("Account")}}</span>
+           </a>
+                 
+      </td> 
+      <td class="settingsTd">
+            <div style=" padding-left: 10px;">
+              <a class="headerBtn hide_sm" title="View" style="margin-left: 6px;margin-right: 12px;" ng-click="switchShow()"> 
+                  <i class="fa fa-th-large" style="padding-top: 6px; font-size: 16px; display: none;" ng-show="show=='list'"></i>
+                  <i class="fa fa-list" style="padding-top: 6px; font-size: 16px;" ng-show="show=='cards'"></i>
+              </a>
+              <div class="btn-group hide_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="Filter/Sort options" data-toggle="dropdown"> 
+                      <i class="fa  fa-filter" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Filter by")}}</li>
+                    <li>
+                      <a ng-click="filterByOwner();selectedOption ='all'" href="" >{{ _("All Accounts")}}</a>
+                    </li>
+                    <li>
+                      <a ng-click="filterByOwner('{{ME}}');selectedOption ='my'" href="" >{{ _("My Accounts")}}</a>
+                    </li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _("Order by")}}</li>
+                    <li>
+                      <a ng-click="orderBy('-updated_at')" href="">{{ _("Last modified")}}</a>
+                    </li>    
+                    <li>
+                      <a ng-click="orderBy('name')" href="" >{{ _("Name")}}</a>
+                    </li>                
+                  </ul>
+              </div>
+              <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
+                  <i class="fa fa-question-circle" style="padding-top: 6px; font-size: 16px;"></i>
+              </a>
+               {%for application in apps %}
+                 {%if application.label =="Admin Console" %}
+                  <a  href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings" style="margin-left: 20px; margin-right: 12px;" > 
+                      <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                 {%endif%}
+               {%endfor%}  
+              <div class="btn-group show_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="More" data-toggle="dropdown"> 
+                      <i class="fa  fa-ellipsis-vertical" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li>
+                      <a class="" title="View"> 
+                        <i class="fa fa-th-large" style="padding-top: 6px; font-size: 16px; display: none;" ng-show="show=='list'"></i>
+                        <i class="fa fa-list" style="padding-top: 6px; font-size: 16px;" ng-show="show=='cards'"></i> Help
+                      </a>
+                    </li>
+                    {%for application in apps %}
+                       {%if application.label =="Admin Console" %}
+                        <li>
+                        <a  href="/apps/{{ application.key.id() }}" class="" title="Settings" > 
+                            <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                            Settings
+                        </a>
+                        </li> 
+                       {%endif%}
+                    {%endfor%}  
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">Filter by</li>
+                    <li>
+                      <a ng-click="filterByOwner();selectedOption ='all'" href="" >All leads</a>
+                    </li>
+                    <li>
+                      <a ng-click="filterByOwner('{{ME}}');selectedOption ='my'" href="" >My leads</a>
+                    </li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">Order by</li>
+                    <li>
+                      <a ng-click="orderBy('firstname')" href="" >Name</a>
+                    </li>
+                    <li>
+                      <a ng-click="orderBy('-updated_at')" href="">Last modified</a>
+                    </li>                                       
+                  </ul>
+              </div>           
           </div>
-        <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown" ng-class="{activeFilter: selectedOption =='sort'}">
-              {{_('Sort by')}}
-              <i class="icon-angle-down"></i>
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a>
-              </li>
-              <li>
-                <a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a>
-              </li>
-            </ul>
-      </div>
-      <span role="button" class="filterItem hiddenOnPhone hiddenOnmd"  ng-class="{activeFilter: selectedOption =='tags'}" ng-click="showTagFilterCard();selectedOption ='tags'"><i class="fa fa-tags"></i><span class="hidden-xs hiddenOnxs">{{ _("Filter by")}} </span> {{ _("Tags")}}</span>
-      </div>
-      </div>
-      <div class="col-md-2 col-xs-2">
-      <a href="/#/accounts/new" class="hidden-sm hidden-xs btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
-           {{_('New')}} <span class="hidden-xs hiddenOnxs">{{_('Account')}}</span>
-         </a>
-      </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-sm-1 col-xs-3 litCardSwitcher"> 
-        <a class="pull-right" style="font-size: 16px;color: #737373;cursor: pointer;" ng-click="switchShow()"> 
-            <i class="fa fa-th-large" style=" padding-top: 6px; font-size: 20px;" ng-show="show=='list'"></i>
-            <i class="fa fa-list-ul" style=" padding-top: 6px; font-size: 20px;" ng-show="show=='cards'"></i>
-        </a>
-    </div>
-   </div>
+      </td>
+          </tr>
+          
+        </tbody>
+  </table>
 </div>
-
 <div  class="page-content">
 <div class="loader-container row" ng-show="isLoading">
       <div class="loader-dialog col-md-4 col-md-offset-4 ">
@@ -181,7 +299,7 @@
 <div class="col-md-12">
  <input type="hidden" value="{{user.emailSignature}}" id="signature"/>
   <div class="row subHeaderContainer">
-  <div  class="task-actions taskCard list-group-item task-actions">
+  <!--<div  class="task-actions taskCard list-group-item task-actions">
        <div class="row">
        <div class="col-md-12">
          <form id="task_actions" class="form-inline" role="form">
@@ -202,7 +320,7 @@
                   Export
                 </span>
                 </button>-->
-                <button ng-show="accounts" title="Add Tags" ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selectedCards.length==0}">
+              <!--  <button ng-show="accounts" title="Add Tags" ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selectedCards.length==0}">
                 <i class="fa fa-tags"></i>
                  <span class="btn-text">
                   Tags
@@ -214,7 +332,7 @@
                   Send mail
                    </span>
                 </button>-->
-                <button ng-show="accounts" title="Delete Accounts" ng-click="editbeforedeleteselection()" class="btn btn-sm btn-default task_action " ng-class="{disabled: selectedCards.length==0}">
+                <!--<button ng-show="accounts" title="Delete Accounts" ng-click="editbeforedeleteselection()" class="btn btn-sm btn-default task_action " ng-class="{disabled: selectedCards.length==0}">
                   <i class="fa fa-trash-o"></i>
                    <span class="btn-text">
                   Delete
@@ -237,7 +355,7 @@
     </form>
    </div>
  </div>
-</div>
+</div>-->
 </div>
 <!-- <form action="/stripe" method="POST">
   <script
@@ -361,7 +479,7 @@
                  </div>
             </div>
         </div>
-        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" id="accountCardsContainer">
+        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" id="accountCardsContainer" style="margin-top: -10px;">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
@@ -811,9 +929,9 @@
   handleUniform();
   $('.waterfall').waterfall({
 
-        colMinWidth: 250,
+        colMinWidth: 230,
 
-        defaultContainerWidth: 800,
+        defaultContainerWidth: 939,
         autoresize: true
   });
   $('#accountCardsContainer').resize(function() {
