--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -1,4 +1,201 @@
-<div class="row subHeader">
+<div class="row subHeader actionsBar ng-scope">
+    <table style="width:100%;height: 55px;">
+          <tbody><tr>
+            <td class="appTd">
+            <div class="btn-group">
+                 <a class="filterItem" href="#" data-toggle="dropdown" style="margin-right:0px">
+                  
+                      <img class="app_icon" src="static/img/sm-iogrow-true.png" style="display:inline-block;height: 20px;margin-right: 3px;">
+                      
+                  <span class="hide_sm">Relationships</span>   
+                  <i class="icon-angle-down fa fa-angle-down"></i>
+                 </a>
+                 <ul class="dropdown-menu">
+                  
+                        
+                          <li><a href="/apps/4512395720392704" data-toggle="modal"><img class="app_icon" src="static/img/sm-iogrow-true.png" style="display:inline-block;height: 20px;margin-right: 3px;">Relationships</a></li>
+                          
+                       
+
+                  
+                        
+                           <li><a href="/apps/5638295627235328" data-toggle="modal"><img class="app_icon" src="static/img/admin_min.png" style="display:inline-block;height: 20px;margin-right: 3px;">Admin Console</a></li>
+                        
+                          
+                       
+
+                  
+                 </ul>
+             </div>
+          </td>
+      <td class="middleHeaderTd">
+        <div class="subheadContient" style="padding-top: 5px;float: left;vertical-align: middle;">
+               <div class="customCheckbox customCheckboxOnHeader " style="display: inline-block; float: left;">  
+                  <input ng-show="leads" title="Select lead" style="padding-top: 4px;" type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)" class="checkbox" id="leadCheckAll">
+                  <label for="leadCheckAll" class="labelElement">
+                    <span class="check"></span>
+                    <span class="box"></span>
+                  </label>  
+              </div>
+              <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
+                Leads
+              </h2>
+              <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
+                <a class="headerBtn" title="Refresh" ng-click="refreshCurrent();"> 
+                      <i class="fa fa-repeat" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
+                <!--<a class="" title="Preview" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-eye" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
+                <a class="" title="Share" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-share-square-o" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>
+                <a class="" title="Convert" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa  fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>-->
+                <a class="headerBtn" title="Add tags" ng-click="showAssigneeTags()" ng-hide=" selectedCards.length==0" style="display: none;"> 
+                      + <i class="fa fa-tags"></i>
+                </a>
+                <!--<a class="" title="Print" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-print" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>-->
+                <a class="headerBtn hide_md" title="Upload" ng-click="showImportModal()"> 
+                      <i class="fa fa-cloud-upload"></i>
+                </a>
+                <a class="headerBtn hide_md" title="Download" ng-click="ExportCsvFile()"> 
+                      <i class="fa fa-cloud-download"></i>
+                </a>
+                <a class="headerBtn" title="Delete" ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()" style="display: none;"> 
+                      <i class="fa fa-trash-o"></i>
+                </a>
+                <!--<a class="" title="More" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa  fa-ellipsis-horizontal" style="padding-top: 6px; font-size: 16px;"></i>
+                </a>-->
+                <div class="btn-group show_md" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="More" data-toggle="dropdown"> 
+                     <!-- <i class="fa  fa-ellipsis-vertical" style="padding-top: 6px; font-size: 16px;"></i>-->
+                     More
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li>
+                      <a class="hide_md" title="Upload" ng-click="showImportModal()"> 
+                        <i class="fa fa-cloud-upload"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="hide_md" title="Download" ng-click="ExportCsvFile()"> 
+                         <i class="fa fa-cloud-download"></i>
+                      </a>
+                    </li>                                                         
+                  </ul>
+              </div> 
+              </div>
+               <!--<div class="communicationBottons pull-right">
+                    <a class="" title="Send an Email" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                      <i class="fa fa-envelope" style="padding-top: 6px; font-size: 16px;"></i>
+                    </a>
+                    <a class="" title="Start a Hangout" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                          <i class="fa fa-video-camera" style="padding-top: 6px; font-size: 16px;"></i>
+                    </a>
+                    <a class="" title="Tweet" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
+                          <i class="fa fa-twitter" style="padding-top: 6px; font-size: 16px;"></i>
+                    </a>
+                  
+              </div>-->
+              <div class="clearfix"></div>
+        </div>
+            <a href="/#/leads/new" class="btn red newAccountBtnOnscroll pull-right" style="/* margin-top: -4px; */">
+             <i class="fa fa-road"></i> New <span class="hidden-xs hiddenOnxs">Lead</span>
+           </a>
+                 
+      </td> 
+      <td class="settingsTd" style="width:281px">
+            <div style=" padding-left: 10px;">
+              <a class="headerBtn hide_sm" title="View" style="margin-left: 6px;margin-right: 12px;" ng-click="switchShow()"> 
+                  <i class="fa fa-th-large" style="padding-top: 6px; font-size: 16px; display: none;" ng-show="show=='list'"></i>
+                  <i class="fa fa-list" style="padding-top: 6px; font-size: 16px;" ng-show="show=='cards'"></i>
+              </a>
+              <div class="btn-group hide_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="Filter/Sort options" data-toggle="dropdown"> 
+                      <i class="fa  fa-filter" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">Filter by</li>
+                    <li>
+                      <a ng-click="filterByOwner();selectedOption ='all'" href="">All leads</a>
+                    </li>
+                    <li>
+                      <a ng-click="filterByOwner('106053029021761137656');selectedOption ='my'" href="">My leads</a>
+                    </li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">Order by</li>
+                    <li>
+                      <a ng-click="orderBy('firstname')" href="">Name</a>
+                    </li>
+                    <li>
+                      <a ng-click="orderBy('-updated_at')" href="">Last modified</a>
+                    </li>                    
+                  </ul>
+              </div>
+              <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
+                  <i class="fa fa-question-circle" style="padding-top: 6px; font-size: 16px;"></i>
+              </a>
+               
+                 
+               
+                 
+                  <a href="/apps/5638295627235328" class="headerBtn hide_sm" title="Settings" style="margin-left: 20px; margin-right: 12px;"> 
+                      <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                 
+                 
+              <div class="btn-group show_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="More" data-toggle="dropdown"> 
+                      <i class="fa  fa-ellipsis-vertical" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li>
+                      <a class="" title="View"> 
+                        <i class="fa fa-th-large" style="padding-top: 6px; font-size: 16px; display: none;" ng-show="show=='list'"></i>
+                        <i class="fa fa-list" style="padding-top: 6px; font-size: 16px;" ng-show="show=='cards'"></i> Help
+                      </a>
+                    </li>
+                    
+                       
+                    
+                       
+                        <li>
+                        <a href="/apps/5638295627235328" class="" title="Settings"> 
+                            <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                            Settings
+                        </a>
+                        </li> 
+                       
+                      
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">Filter by</li>
+                    <li>
+                      <a ng-click="filterByOwner();selectedOption ='all'" href="">All leads</a>
+                    </li>
+                    <li>
+                      <a ng-click="filterByOwner('106053029021761137656');selectedOption ='my'" href="">My leads</a>
+                    </li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">Order by</li>
+                    <li>
+                      <a ng-click="orderBy('firstname')" href="">Name</a>
+                    </li>
+                    <li>
+                      <a ng-click="orderBy('-updated_at')" href="">Last modified</a>
+                    </li>                                       
+                  </ul>
+              </div>           
+          </div>
+      </td>
+          </tr>
+          
+        </tbody>
+  </table>
+</div>
+
+<!--<div class="row subHeader">
     <div class="currentApp">
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
@@ -13,7 +210,7 @@
             {%endfor%}
            </ul>
         </div>
-    </div>
+    </div>-->
   <div class=" subHeaderContent">
     <!--<div class="pull-right sharebuttonDiv">
       <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
@@ -32,7 +229,7 @@
     </h2>
   </div>
 </div>
-<div  class="page-content">
+<div  class="page-content" style="margin-top: 45px !important;">
   <div class="loader-container row" ng-show="isLoading">
     <div class="loader-dialog col-md-4 col-md-offset-4 ">
       <div class="loader-content">
@@ -100,32 +297,6 @@
                         </li>    
                     </ul>
 
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="relatedTags tags-section">
-                                        <div class="section-content">
-                                            <span class="pull-left"><i class="fa fa-tags"></i>{{_('Tags')}}: </span>
-                                            <!-- ngRepeat: tag in account.tags -->
-                                            <div ng-repeat="tag in opportunity.tags">
-                                                <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
-                                                    <a href="" ng-click="removeTag(tag,$index)" class="removeRelatedTag select2-search-choice-close" ></a>
-                                                    <%= tag.name %>
-                                                </span>
-                                            </div>
-                                           <a href="" ng-hide="showNewTag" ng-click="showNewTag=true" style="margin-left:10px"> {{_('+Add new tag')}}</a>
-                                           <form ng-show="showNewTag" class="newTagFormShow">
-                                                <select id="select2_sample2" class="selectTagInput form-control select2" multiple>
-                                                  <option ng-repeat="tag in tags"
-                                                  value='<%=tag.entityKey%>'>
-                                                    <%=tag.name%>
-                                                  </option>
-                                                </select>
-                                                <button type="submit"  ng-click="addTagsTothis();showNewTag=false" class="btn blue jfk-button btn-sm jfk-button-action">{{_('Add')}}</button>
-                                            </form>
-                                        </div>
-                                    </div>
                 </div>
               </div>
             </div>
@@ -611,7 +782,31 @@
                                                 <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(opportunity.updated_at)%> </span>
                                               </li>
                                             </ul>
-                                        </div>  
+                                        </div> 
+                                              <div class="col-md-12">
+                                                <div class="relatedTags tags-section">
+                                                                      <div class="section-content">
+                                                                          <span class="pull-left"><i class="fa fa-tags"></i>{{_('Tags')}}: </span>
+                                                                          <!-- ngRepeat: tag in account.tags -->
+                                                                          <div ng-repeat="tag in opportunity.tags">
+                                                                              <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
+                                                                                  <a href="" ng-click="removeTag(tag,$index)" class="removeRelatedTag select2-search-choice-close" ></a>
+                                                                                  <%= tag.name %>
+                                                                              </span>
+                                                                          </div>
+                                                                         <a href="" ng-hide="showNewTag" ng-click="showNewTag=true" style="margin-left:10px"> {{_('+Add new tag')}}</a>
+                                                                         <form ng-show="showNewTag" class="newTagFormShow">
+                                                                              <select id="select2_sample2" class="selectTagInput form-control select2" multiple>
+                                                                                <option ng-repeat="tag in tags"
+                                                                                value='<%=tag.entityKey%>'>
+                                                                                  <%=tag.name%>
+                                                                                </option>
+                                                                              </select>
+                                                                              <button type="submit"  ng-click="addTagsTothis();showNewTag=false" class="btn blue jfk-button btn-sm jfk-button-action">{{_('Add')}}</button>
+                                                                          </form>
+                                                                      </div>
+                                                                  </div>
+                                              </div>
                                 <div class="clearfix"></div>
                               </div>
                         </div>
