--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -309,7 +309,7 @@ if (window.location.host != "localhost")
       <section class="section-download section-panel-fullscreen js-hinted-fullscreen" style="height: 600px;">
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
           <div class="one-whole" id="pricing" style="text-align:center;">
-          <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png"/>
+          <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" alt="Built on Google, CRM ioGrow is free for the first 10 000 users !"/>
         <h1 class="section-headline section-headline-large section-headline-gray heading-headline">Built on Google, CRM ioGrow is free for the first 10 000 users !
             </h1>
             <br>
@@ -572,5 +572,8 @@ function onSignInCallback(authResult) {
  */
 
 </script>
-  
+  <noscript>A simple social CRM for small businesses on Google Google CRM
+social crm
+linkedin crm
+crm for small business</noscript>
 </body></html>
